Basic filtering and Indexing

--- a/snips.ipynb
+++ b/snips.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "b92221e2",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "7e034600",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "8fbf08e9",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "7a091c6d",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "id": "cc65b6ba",
    "metadata": {},
    "outputs": [],
@@ -70,11 +70,13 @@
     "content = \"This has the content of the blog\"\n",
     "img_id = [\"id for first img\", \"id for the second img\",\"Id for the third img\"]\n",
     "writting_date = datetime.datetime.now()\n",
+    "author = \"arc\"\n",
     "\n",
     "\n",
     "post = {\n",
     "        \"title\":title,\n",
     "        \"content\":content,\n",
+    "        \"author\":author,\n",
     "        \"img_id\":img_id,\n",
     "        \"writting_date\":writting_date,\n",
     "        \"timestamp_of_insertion\":datetime.datetime.now()\n",
@@ -83,21 +85,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "id": "f4e676ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68037b1dcbc53b9c6e7f72ff\n"
+     ]
+    }
+   ],
    "source": [
     "posts = db.posts\n",
-    "# post_id = posts.insert_one(post).inserted_id\n",
+    "post_id = posts.insert_one(post).inserted_id\n",
     "\n",
-    "# print(post_id)\n",
+    "print(post_id)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "id": "937b93e5",
    "metadata": {},
    "outputs": [
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "id": "94ce267b",
    "metadata": {},
    "outputs": [
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "id": "f40ce38a",
    "metadata": {},
    "outputs": [],
@@ -163,17 +173,18 @@
     "\n",
     "### Why?\n",
     "- 12 bytes ObjectId by mongo containing\n",
-    "    - timestamp\n",
-    "    - machine Identifier\n",
-    "    - processid\n",
-    "    - counter\n",
+    "    - A 4-byte timestamp, representing the ObjectId's creation, measured in seconds since the Unix epoch.\n",
+    "\n",
+    "    - A 5-byte random value generated once per process. This random value is unique to the machine and process.\n",
+    "\n",
+    "    - A 3-byte incrementing counter, initialized to a random value\n",
     "\n",
     "- this gurantees uniqueness\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "id": "2402141f",
    "metadata": {},
    "outputs": [
@@ -181,14 +192,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('680240d0f823ada1d23d8bd2'),\n",
+      "{'_id': ObjectId('680375bacbc53b9c6e7f72fa'),\n",
+      " 'author': 'arc',\n",
       " 'content': 'This has the content of the blog',\n",
       " 'img_id': ['id for first img',\n",
       "            'id for the second img',\n",
       "            'Id for the third img'],\n",
-      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 18, 17, 36, 59, 466000),\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000),\n",
       " 'title': 'This is my first mongo insert',\n",
-      " 'writting_date': datetime.datetime(2025, 4, 18, 17, 36, 59, 466000)}\n"
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000)}\n"
      ]
     }
    ],
@@ -196,12 +208,12 @@
     "from bson.objectid import ObjectId\n",
     "\n",
     "#note how we have to first convert to the BSON ObjectId tp query\n",
-    "prettyprint.pprint(posts.find_one({'_id':ObjectId('680240d0f823ada1d23d8bd2')}))"
+    "prettyprint.pprint(posts.find_one({'_id':ObjectId('680375bacbc53b9c6e7f72fa')}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "id": "284a82e6",
    "metadata": {},
    "outputs": [],
@@ -211,14 +223,16 @@
     "    {\n",
     "        \"title\":\"tis the second post\",\n",
     "        \"content\":\"tis the content of second post\",\n",
-    "        \"img_id\":\"12331231\",\n",
+    "        \"img_id\":[\"12331231\"],\n",
+    "        \"author\":\"arc\",\n",
     "        \"writting_date\":datetime.datetime.now(),\n",
     "        \"timestamp_of_insertion\": datetime.datetime.now()\n",
     "    },\n",
     "    {\n",
     "        \"title\":\"this is the third post\",\n",
     "        \"content\":\"I am exhausted by typing all this dummy text\",\n",
-    "        \"img_id\":\"123123132\",\n",
+    "        \"author\": \"blah\",\n",
+    "        \"img_id\":[\"123123132\"],\n",
     "        \"writting_date\":datetime.datetime.now(),\n",
     "        \"timestamp_of_insertion\":datetime.datetime.now()\n",
     "    }\n",
@@ -229,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "75d255e8",
    "metadata": {},
    "outputs": [
@@ -238,7 +252,7 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "[ObjectId('68036fcdec2c82ace03fda1b'), ObjectId('68036fcdec2c82ace03fda1c')]\n"
+      "[ObjectId('68037b1ecbc53b9c6e7f7300'), ObjectId('68037b1ecbc53b9c6e7f7301')]\n"
      ]
     }
    ],
@@ -252,8 +266,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "939f95e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('680375bacbc53b9c6e7f72fa'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'This has the content of the blog',\n",
+      " 'img_id': ['id for first img',\n",
+      "            'id for the second img',\n",
+      "            'Id for the third img'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000),\n",
+      " 'title': 'This is my first mongo insert',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000)}\n",
+      "{'_id': ObjectId('680375edcbc53b9c6e7f72fb'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'tis the content of second post',\n",
+      " 'img_id': ['12331231'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000),\n",
+      " 'title': 'tis the second post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000)}\n",
+      "{'_id': ObjectId('680375edcbc53b9c6e7f72fc'),\n",
+      " 'author': 'blah',\n",
+      " 'content': 'I am exhausted by typing all this dummy text',\n",
+      " 'img_id': ['123123132'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000),\n",
+      " 'title': 'this is the third post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000)}\n",
+      "{'_id': ObjectId('68037b1dcbc53b9c6e7f72ff'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'This has the content of the blog',\n",
+      " 'img_id': ['id for first img',\n",
+      "            'id for the second img',\n",
+      "            'Id for the third img'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 49, 322000),\n",
+      " 'title': 'This is my first mongo insert',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 49, 321000)}\n",
+      "{'_id': ObjectId('68037b1ecbc53b9c6e7f7300'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'tis the content of second post',\n",
+      " 'img_id': ['12331231'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000),\n",
+      " 'title': 'tis the second post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000)}\n",
+      "{'_id': ObjectId('68037b1ecbc53b9c6e7f7301'),\n",
+      " 'author': 'blah',\n",
+      " 'content': 'I am exhausted by typing all this dummy text',\n",
+      " 'img_id': ['123123132'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000),\n",
+      " 'title': 'this is the third post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now to find posts\n",
+    "\n",
+    "posts_cursor = posts.find()\n",
+    "\n",
+    "for post in posts_cursor:\n",
+    "    prettyprint.pprint(post)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "48533165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('680375bacbc53b9c6e7f72fa'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'This has the content of the blog',\n",
+      " 'img_id': ['id for first img',\n",
+      "            'id for the second img',\n",
+      "            'Id for the third img'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000),\n",
+      " 'title': 'This is my first mongo insert',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('680375edcbc53b9c6e7f72fb'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'tis the content of second post',\n",
+      " 'img_id': ['12331231'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000),\n",
+      " 'title': 'tis the second post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('68037b1dcbc53b9c6e7f72ff'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'This has the content of the blog',\n",
+      " 'img_id': ['id for first img',\n",
+      "            'id for the second img',\n",
+      "            'Id for the third img'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 49, 322000),\n",
+      " 'title': 'This is my first mongo insert',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 49, 321000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('68037b1ecbc53b9c6e7f7300'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'tis the content of second post',\n",
+      " 'img_id': ['12331231'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000),\n",
+      " 'title': 'tis the second post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "No of posts by Arc are : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to filter people we do\n",
+    "arc_cursor_posts = posts.find({\"author\":\"arc\"})\n",
+    "\n",
+    "for post in arc_cursor_posts:\n",
+    "    prettyprint.pprint(post)\n",
+    "    print(\"\\n\\n\\n-------------------------------------------------\\n\\n\\n\")\n",
+    "\n",
+    "arc_posts_count = posts.count_documents({\"author\":\"arc\"})\n",
+    "print(f\"No of posts by Arc are : {arc_posts_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "0501a079",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('680375bacbc53b9c6e7f72fa'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'This has the content of the blog',\n",
+      " 'img_id': ['id for first img',\n",
+      "            'id for the second img',\n",
+      "            'Id for the third img'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000),\n",
+      " 'title': 'This is my first mongo insert',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 36, 44, 961000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('680375edcbc53b9c6e7f72fb'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'tis the content of second post',\n",
+      " 'img_id': ['12331231'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000),\n",
+      " 'title': 'tis the second post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('68037b1dcbc53b9c6e7f72ff'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'This has the content of the blog',\n",
+      " 'img_id': ['id for first img',\n",
+      "            'id for the second img',\n",
+      "            'Id for the third img'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 49, 322000),\n",
+      " 'title': 'This is my first mongo insert',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 49, 321000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('68037b1ecbc53b9c6e7f7300'),\n",
+      " 'author': 'arc',\n",
+      " 'content': 'tis the content of second post',\n",
+      " 'img_id': ['12331231'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000),\n",
+      " 'title': 'tis the second post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('680375edcbc53b9c6e7f72fc'),\n",
+      " 'author': 'blah',\n",
+      " 'content': 'I am exhausted by typing all this dummy text',\n",
+      " 'img_id': ['123123132'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 37, 41, 296000),\n",
+      " 'title': 'this is the third post',\n",
+      " 'writting_date': datetime.datetime(2025, 3, 17, 15, 37, 41, 296000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'_id': ObjectId('68037b1ecbc53b9c6e7f7301'),\n",
+      " 'author': 'blah',\n",
+      " 'content': 'I am exhausted by typing all this dummy text',\n",
+      " 'img_id': ['123123132'],\n",
+      " 'timestamp_of_insertion': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000),\n",
+      " 'title': 'this is the third post',\n",
+      " 'writting_date': datetime.datetime(2025, 4, 19, 15, 59, 50, 215000)}\n",
+      "\n",
+      "\n",
+      "\n",
+      "--------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range based learch and filter\n",
+    "import datetime\n",
+    "date_before = datetime.datetime(2025, 4, 19,17,12)\n",
+    "date_filter_cursor = posts.find({\"writting_date\": {\"$lt\":date_before}}).sort(\"author\")\n",
+    "\n",
+    "for post in date_filter_cursor:\n",
+    "    prettyprint.pprint(post)\n",
+    "    print(\"\\n\\n\\n--------------------------------------------\\n\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ddbe0fd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating indexes for faster query on the particular query\n",
+    "\n",
+    "result_index = posts.create_index([(\"writting_date\", pymongo.DESCENDING)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "12f08f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_id_', 'writting_date_-1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted(list(posts.index_information())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830b42b3",
    "metadata": {},
    "outputs": [],
    "source": []
